Adapted index file for roblet.org host

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>roblet.org</h1>
+<html>
+<body>
+<iframe src="https://gubjack.github.io/roblet.org/httpdocs/index.html" width="100%" height="100%">
+</body>
+</html>
