--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<iframe src="https://gubjack.github.io/roblet.org/httpdocs/index.html" width="100%" height="100%">
+<iframe src="/httpdocs/index.html" width="100%" height="100%">
 </body>
 </html>
